--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
  <head>
   <title>
    Ernährung und Training tipps
-  </title>
- </head>
- <body>
-   <h1>Ernährungsgrundlagen im Muskelaufbau</h1>
-   <h2>Makro Verteilung</h2>
-   <p>Eiweiß:mind.2g pro kg körpergewicht<br />Fett:0,7 bis 1,2g pro kg körpergewicht</p>
-  </body>
+   </title>
+  </head>
+    <body>
+       <h1>Ernährungsgrundlagen im Muskelaufbau</h1>
+       <h2>Makro Verteilung</h2>
+      <p>Eiweiß:2,2g pro kg körpergewicht<br />Fett:0,7 bis 1,2g pro kg körpergewicht</p>
+    </body>
  </html>
 
