--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        <h1>Ernährungsgrundlagen im Muskelaufbau</h1>
        <h2>Makro Verteilung</h2>
       <p>Eiweiß:2,2g pro kg körpergewicht<br />Fett:0,7 bis 1,2g pro kg körpergewicht</p>
-         <a href="http://www.borg.at/home/"> Studie</a>
+         <a href="https://de.wikipedia.org/wiki/Wikipedia:Hauptseite"> Studie</a>
     </body>
  </html>
 
