--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
        <h1>Ernährungsgrundlagen im Muskelaufbau</h1>
        <h2>Makro Verteilung</h2>
-      <p>Eiweiß:2,2g pro kg körpergewicht<br />Fett:0,7 bis 1,2g pro kg körpergewicht</p>
+      <p>Eiweiß:mind.1,6g pro kg Körpergewicht<br />Fett:0,7 bis 1,2g pro kg Körpergewicht</p>
          <a href="https://de.wikipedia.org/wiki/Wikipedia:Hauptseite"> Studie</a>
     </body>
  </html>
