--- a/about_me.html
+++ b/about_me.html
@@ -2,10 +2,14 @@
 <html>
  <head>
   <title>
-   Über meine Person
+  about me
    </title>
   </head>
     <body>
+     <h1>ABOUT ME</h1>
+     <p>Hobbys</p> <br >
+     <p>Gym</p>
+     <p>Motorräder</p>
       
     </body>
  </html>
