--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,7 @@
   </head>
     <body>
      <h1>ABOUT ME</h1>
-     <p>Hobbys</p>
+     <h2>Hobbys</h2>
      <p>Gym</p>
      <p>Motorräder</p>
       
