--- a/about_me.html
+++ b/about_me.html
@@ -8,8 +8,10 @@
     <body>
      <h1>ABOUT ME</h1>
      <h2>Hobbys</h2>
-     <p>Gym</p>
-     <p>Motorräder</p>
+     <ol>
+      <li>Gym</li>
+      <li>motorräder</li>
+     </ol>
       
     </body>
  </html>
