--- a/about_me.html
+++ b/about_me.html
@@ -10,8 +10,16 @@
      <h2>Hobbys</h2>
      <ol>
       <li>Gym</li>
-      <li>motorräder</li>
+      <li>Motorräder</li>
      </ol>
+     <h2>Lieblingsdinge</h2>
+     <ul>
+      <li>Motorräder: zu viele</li>
+      <li>Essen: Reis Pute und Brocolie</li>
+      <li>Getränk: Wasser </li>
+      <li>Film: zu viele </li>
+      <li>Farbe: Weiß </li>
+      
       
     </body>
  </html>
