--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,7 @@
       <li>Film: zu viele </li>
       <li>Farbe: Weiß </li>
      </ul>
-      
+       <a href="http://www.borg.at/home/">my school</a>
       
     </body>
  </html>
