--- a/about_me.html
+++ b/about_me.html
@@ -22,6 +22,17 @@
       <li>Farbe: Weiß </li>
      </ul>
        <a href="http://www.borg.at/home/">my school</a>
+     <h2>Lieblings Athleten</h2>
+     <table>
+  <tr>
+    
+  </tr>
+  <tr>
+    <td>Jeff Seid</td>
+    <td>Connor Murphy</td>
+    <td>Zyzz</td>
+  </tr>
+  </table>
       
     </body>
  </html>
