--- a/about_me.html
+++ b/about_me.html
@@ -25,9 +25,11 @@
      <h2>Lieblings Hunderassen</h2>
      <table>
       <tr>
-    <td>Jeff Seid</td>
-    <td>Connor Murphy</td>
-    <td>Zyzz</td>
+    <td>Pitbull</td>
+    <td>Siberian Husky</td>
+    <td>Border Collie</td>
+       <td>Australian Shepherd</td>
+       <td>......</td>
      </tr>
   </table>
       
