--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
       <li>Hunde</li>
       <li>Motorräder</li>
      </ol>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/2011-11-30_Pit_bull_on_Ellerbe_Creek_Trail.jpg" />
+    <img weidth=300  src="https://upload.wikimedia.org/wikipedia/commons/5/54/2011-11-30_Pit_bull_on_Ellerbe_Creek_Trail.jpg" />
      <h2>Lieblingsdinge</h2>
      <ul>
       <li>Motorräder: zu viele</li>
