--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,8 @@
       <li>Hunde</li>
       <li>Motorräder</li>
      </ol>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/2011-11-30_Pit_bull_on_Ellerbe_Creek_Trail.jpg" width=320 height=240 controls alt0"Pit bull"  />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/2011-11-30_Pit_bull_on_Ellerbe_Creek_Trail.jpg" 
+         width=320 height=240 alt="Pit Bull" />
      <h2>Lieblingsdinge</h2>
      <ul>
       <li>Motorräder: zu viele</li>
@@ -25,7 +26,7 @@
      <h2>Lieblings Hunderassen</h2>
      <table>
       <tr>
-    <td>American Pit bull Terrier</td>
+    <td>American Pit Bull Terrier</td>
     <td>Siberian Husky</td>
     <td>Border Collie</td>
        <td>Australian Shepherd</td>
