--- a/about_me.html
+++ b/about_me.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+ <link href=".https://erikabw.github.io/FIVEone/style.css" type="text/css" rel="stylesheet"> 
   <title>
   about me
    </title>
